Updates to DX9 to get a step closer to upadating to ME changes.

--- a/MERendererDX9.vcxproj
+++ b/MERendererDX9.vcxproj
@@ -83,6 +83,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="medx9\ConstantBuffer.h" />
     <ClInclude Include="medx9\DirectX.h" />
     <ClInclude Include="medx9\IndexBuffer.h" />
     <ClInclude Include="medx9\MEDX9.h" />
@@ -95,6 +96,7 @@
     <ClInclude Include="medx9\VertexShader.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="medx9\ConstantBuffer.cpp" />
     <ClCompile Include="medx9\IndexBuffer.cpp" />
     <ClCompile Include="medx9\MEDX9.cpp" />
     <ClCompile Include="medx9\PixelShader.cpp" />
